[package]
name = "keyde"
description = "A fast, dependency-free Kd-tree"
version = "0.2.0"
edition = "2021"
authors = [ "Erik W. Gren <ErikWDev@gmail.com>" ]
license = "MIT"
repository = "https://github.com/ErikWDev/keyde"
keywords = ["kd-tree", "query", "spatial", "clustering"]
categories = ["game-development", "algorithms"]

[dependencies]
glam = { version = "0.21", optional = true }

[features]
default = []
glam = ["dep:glam"]
