[package]
name = "keyde"
description = "Fast, Dependency-free Spacial Queries"
version = "0.2.2"
edition = "2021"
authors = [ "Erik W. Gren <ErikWDev@gmail.com>" ]
license = "MIT"
repository = "https://github.com/ErikWDev/keyde"
keywords = ["kd-tree", "query", "spacial", "clustering", "nearest-neighbor"]
categories = ["game-development", "algorithms"]

[dependencies]
glam = { version = "0.21", optional = true }

[features]
default = []
glam = ["dep:glam"]
